# sutra-engine

./: .bandit  .bundlesizerc  .flake8  .gitignore  .pre-commit-config.yaml  ACHIEVEMENT_10000X.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  BIOLOGICAL_INTELLIGENCE.md  BUILD_STRATEGY.md  BULK_INGESTER_INTEGRATION.md  CHANGELOG.md  CHANGELOG_SHARDED_STORAGE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLEAN_BUILD_DEPLOY_RELEASE.md  CLEAN_REFACTORING_COMPLETE.md  COMPLETE_DOCUMENTATION.md  Cargo.toml  DEEP_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE_TCP.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY_2025-10-20.md  DESKTOP_REVIEW_ANALYSIS.md  DESKTOP_UX_REVIEW.md  DEV.md  DISTRIBUTED_DEPLOYMENT.md  DISTRIBUTED_SETUP.md  DOCKER_BUILD_CLEANUP.md  DOCS_QUICK_REFERENCE.md  DOCS_READY.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_COMPLETE_ML_FOUNDATION.md  DOCUMENTATION_REORGANIZATION_PLAN.md  DOCUMENTATION_UPDATE.md  DOCUMENTATION_UPDATE_COMPLETE.md  DOCUMENTATION_UPDATE_UNIFIED_LEARNING.md  (+111 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  standalone-engine-sync.yml
.sutra/compose/: production.yml
archive/old_fake_system/: swarm_agents_old.py
base-images/: nginx.Dockerfile  node.Dockerfile  python.Dockerfile  runtime.Dockerfile  rust.Dockerfile
benchmarks/: benchmark_framework.py  next_gen_benchmark.py  run_benchmark.py
crates/bulk-ingester/: Cargo.toml  README.md
crates/embedder/: .gitignore  Cargo.toml  fix_array_trait_compatibility.py  fix_inputs_macro.py  fix_ndarray_conversion.py  fix_ort_16_complete.py  fix_ort_16_proper.py  fix_quantization.py
crates/embedder/.github/: copilot-instructions.md
crates/embedder/benches/: embedding_benchmark.rs
crates/embedder/docs/: README.md
crates/embedder/docs/architecture/: advanced-features.md  api-design.md  performance-engineering.md
crates/embedder/docs/development/: RESEARCH.md
crates/embedder/docs/reference/: MODEL_INVENTORY.md
crates/embedder/src/: benchmark.rs  hardware.rs  lib.rs  main.rs  model_registry.rs
crates/grid-agent/: Cargo.toml
crates/grid-master/: Cargo.toml  README.md
crates/model/: .gitignore  COMPETITIVE_COMPARISON.md  CONTRIBUTING.md  DOCS_UPDATE_SUMMARY.md  DOCUMENTATION_CLEANUP.md  DOCUMENTATION_UPDATES_COMPLETE.md  Dockerfile  QUICKSTART.md  TRAINING_FRAMEWORK.md  launch_review_intelligence.sh
crates/model/crates/sutra-core/: Cargo.toml
crates/model/crates/sutra-core/src/: error.rs  lib.rs  model.rs  ops.rs  tensor.rs
crates/model/crates/sutra-peft/: Cargo.toml
crates/model/crates/sutra-peft/src/: lib.rs  lora.rs
crates/model/crates/sutra-quantize/: Cargo.toml
crates/model/crates/sutra-quantize/src/: quantized_ops.rs
crates/model/examples/: Cargo.toml  end_to_end.rs  model_loader.rs  quantization_benchmark.rs  review_intelligence_demo.rs  rwkv_inference.rs
crates/protocol/: Cargo.toml  README.md
crates/storage/: CRITICAL_FIXES.md  CROSS_PACKAGE_IMPACT.md  Cargo.toml  DEEP_DIVE_ANALYSIS.md  P0_PRODUCTION_COMPLETE.md  README.md
crates/storage-client/: setup.py
desktop/: Cargo.toml  README.md  build-macos.sh
desktop/scripts/: build-macos.sh
desktop/src/: app.rs  local_embedding.rs  local_nlg.rs  main.rs  theme.rs  types.rs
docker/: Dockerfile.client  Dockerfile.core  Dockerfile.trainer  haproxy.cfg
docs/: ACHIEVEMENTS.md  AGGRESSIVE_ML_OPTIMIZATION_RESULTS.md  API_REFERENCE.md  ARCHITECTURE.md  BULK_INGESTER_ARCHITECTURE.md  BULK_INGESTER_DOCUMENTATION_UPDATE.md  BULK_INGESTER_FIXES.md  BULK_INGESTER_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  CLOUD_NATIVE_ALPINE_OPTIMIZATIONS.md  COMPONENT_INITIALIZATION_GUIDELINES.md  CONTRIBUTING.md  DATA_PREPARATION_TEMPLATE.md  DEFAULT_CONFIG_UPDATE_V3.md  DOCKER_OPTIMIZATION_GUIDE.md  DOCUMENTATION_AUDIT_2025.md  DOCUMENTATION_COMPLETION_SUMMARY.md  DOCUMENTATION_PROGRESS.md  DOCUMENTATION_UPDATE_COMPLETE_V3.md  DOCUMENTATION_UPDATE_SUMMARY.md  EDITIONS.md  EMBEDDING_TROUBLESHOOTING.md  FINAL_REPORT.md  GETTING_STARTED.md  INDEX.md  MIGRATION_UNIFIED_LEARNING.md  ML_SERVICE_REFACTORING_COMPLETE.md  OPERATIONS.md  P1_2_PARALLEL_PATHFINDING_COMPLETE.md  P1_5_HNSW_PERSISTENT_INDEX_COMPLETE.md  P1_COMPLETION_SUMMARY.md  PERFORMANCE_FIXES_SUMMARY.md  PLATFORM_RELEASE_STRATEGY.md  PRICING.md  PRODUCTION.md  PRODUCTION_FIXES.md  PRODUCTION_READINESS_COMPLETE.md  PROJECT_STATUS.md  README.md  SCALING_RELEASE_NOTES_V3.md  (+18 more)
docs/api/: API_INTEGRATION_COMPLETE.md  EDITION_API.md  EMBEDDING_SERVICE_API.md  ML_FOUNDATION_API.md  NLG_SERVICE_API.md
docs/architecture/: DEEP_DIVE.md  DOCUMENTATION_UPDATE_2025_10_27.md  ML_INFERENCE_THREE_REPO_STRATEGY.md  ML_MODERNIZATION_V3_CHANGES.md  PERFORMANCE_OPTIMIZATION.md  SCALABILITY.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_ANALYSIS.md  enterprise.md  learning.md  overview.md  runtime.md  swarm_intelligence.md  system-overview.md
docs/dependency-management/: LOCK_FILES.md  QUICK_START.md
docs/deployment/: CLEAN_BUILD_DEPLOY_RELEASE.md  DEPLOYMENT_CHANGELOG.md  DEPLOYMENT_CLEANUP_COMPLETE.md  DEPLOYMENT_GUIDE.md  IMAGE_NAMING.md  NAMING_CONVENTIONS.md  NAMING_UPDATE_SUMMARY.md  NETWORK_SECURITY.md  NETWORK_SECURITY_QUICK_REF.md  OPTIMIZED_BUILD_QUICK_REF.md  README.md  (+7 more)
haproxy/: nlg-lb.cfg
k8s/: 00-namespace.yaml  hpa.yaml
scripts/: README_WIKIPEDIA_TESTS.md  audit-network-exposure.sh  ci-validate.sh  generate-all-docs.sh  integration-test.sh  optimize-images.sh  prepare_engine_release.sh  push_to_standalone.sh  release_storage_engine.sh  setup_wikipedia_test.sh  smoke-test-embeddings.sh  stress_test.py  test_ha_load_balancing.sh  validate-images.sh  validate-naming.sh  validate-production-fixes.sh  validate_scaling.py  wikipedia_performance_suite.py
src/: biological_trainer.py  config.py  persistence_pbss.py  swarm_agents.py  true_biological_core.py  true_distributed_emergence.py
tests/: conftest.py  test_embedding_service_migration.py  test_failure_scenarios.py  test_query_processor_semantic_only.py  test_unified_learning_integration.py
tools/: cleanup_repo.sh
web_templates/: intelligence_md3.html  md3_components.html  settings_md3.html
(+98468 files in other folders)
