[workspace]
resolver = "2"
members = [
    "crates/storage",
    "crates/protocol",
    "crates/bulk-ingester",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["SutraWorks"]
license = "MIT"
repository = "https://github.com/sutraworks/sutra-engine"

[workspace.dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "signal", "net", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = "0.16"
ndarray-linalg = "0.16"
rayon = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internal mapped dependencies
sutra-protocol = { path = "crates/protocol" }
