[package]
name = "sutra-embedder"
version = "0.1.0"
edition = "2021"
authors = ["Sutra Embedder Team"]
description = "Efficient embedding models for resource-constrained to high-performance hardware"
license = "MIT"
repository = "https://github.com/yourusername/sutra-embedder"
resolver = "2"

[dependencies]
# Core ML/Embedding libraries - ONNX Runtime for inference  
ort = { version = "2.0.0-rc.10", features = ["download-binaries", "copy-dylibs", "half"] }
ndarray = "0.15"
tokenizers = "0.19"

# Optimization & Quantization
half = "2.3"
rayon = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# CLI & Utilities
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Hardware detection
sysinfo = "0.29"

# HTTP client for model downloads
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json", "stream"], default-features = false }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time", "full"] }
tokio-stream = "0.1"
futures = "0.3"

# Random number generation
rand = "0.8"

# Progress bars for downloads
indicatif = "0.17"

# Cryptography for SHA256 validation  
sha2 = "0.10"

# Directory utilities for cache management
dirs = "5.0"

# HTTP Server dependencies
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[features]
default = ["download-binaries"]
download-binaries = []
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
directml = ["ort/directml"]
coreml = ["ort/coreml"]
websocket = ["tokio-tungstenite"]

[dependencies.tokio-tungstenite]
version = "0.19"
optional = true

[[bin]]
name = "sutra-embedder"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

