[package]
name = "examples"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
sutra-core = { workspace = true }
sutra-quantize = { workspace = true }
sutra-peft = { workspace = true }
sutra-rwkv = { workspace = true }
sutra-mamba = { workspace = true }
sutra-nesy = { workspace = true }
sutra-loader = { workspace = true }
sutra-tokenizer = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
chrono = "0.4"

# === Professional Examples & Benchmarks ===

[[example]]
name = "quantization_benchmark"
path = "quantization_benchmark.rs"

[[example]]
name = "model_loader"
path = "model_loader.rs"

[[example]]
name = "end_to_end"
path = "end_to_end.rs"

[[example]]
name = "qlora_training"
path = "qlora_training.rs"

[[example]]
name = "rwkv_inference"
path = "rwkv_inference.rs"

[[example]]
name = "mamba_inference"
path = "mamba_inference.rs"

[[example]]
name = "nesy_agent"
path = "nesy_agent.rs"

[[example]]
name = "trading_terminal_demo"
path = "trading_terminal_demo.rs"

[[example]]
name = "review_intelligence_demo"
path = "review_intelligence_demo.rs"

