[package]
name = "sutra-peft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sutra-core = { workspace = true }
sutra-quantize = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
