[package]
name = "sutra-quantize"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sutra-core = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
